WP-4810: fix spacing when time is inot included.

--- a/sass/conditionals/alumni/alumni-reunion-schedule-list.sass
+++ b/sass/conditionals/alumni/alumni-reunion-schedule-list.sass
@@ -43,10 +43,11 @@
     font-family: $font-demi
     font-size: 15px
     line-height: 1.3
-    margin: 12px 0
+    margin-top: 12px
 
   // Title of event
   .field-name-title
+    margin-top: 12px
     h2
       font-family: $font-sans
       font-size: 20px
